change header formatting and style

--- a/index.hbs
+++ b/index.hbs
@@ -37,7 +37,8 @@
         height="{{height}}px"
       />
       {{/with}}
-      <h1>{{name}}, {{subtitle}}</h1>
+      <h1 class="name">{{name}}</h1>
+      <h2 class="subtitle">{{subtitle}}</h2>
       <a href="mailto:{{email}}">{{email}}</a>
     </header>
     <main>
