--- a/index.hbs
+++ b/index.hbs
@@ -47,7 +47,7 @@
         <article>
           <h2 id="{{@key}}">{{@key}}</h2>
           <span>{{question}}</span>
-          <p>{{text}}</p>
+          <p>{{{text}}}</p>
         </article>
         {{/each}}
       </section>
