--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -85,8 +85,12 @@ header .subtitle {
 
 /* WWWWW */
 
+#wwwww {
+  /* background-color: blue; */
+}
+
 .wwwww {
-  margin: 1rem;
+  margin: 1rem 1rem 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -128,14 +132,18 @@ header .subtitle {
 /* portfolio */
 
 #portfolio {
-  margin: 3rem 1rem 1rem;
+  /* background-color: green; */
+  padding-top: 3rem;
+}
+#portfolio h2 {
+  margin: 0 1rem 1rem;
   text-align: center;
 }
 .portfolio {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 1rem;
+  margin: 0 1rem;
 }
 .portfolio article {
   flex: 1 0 20rem;
@@ -176,7 +184,11 @@ header .subtitle {
 /* testimonials */
 
 #testimonials {
-  margin: 3rem 1rem 1rem;
+  /* background-color: red; */
+  padding-top: 3rem;
+}
+#testimonials h2 {
+  margin: 0 1rem 1rem;
   text-align: center;
 }
 .testimonials {
@@ -209,11 +221,13 @@ header .subtitle {
 /* footer */
 
 footer {
+  /* background-color: pink; */
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 1rem;
-  margin-bottom: 10rem;
+  margin: 0 1rem;
+  padding-bottom: 10rem;
 }
 
 /* contact */
