--- a/index.hbs
+++ b/index.hbs
@@ -26,6 +26,10 @@
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="/stylesheet.css" />
+
+    <!-- scripts -->
+    <script data-goatcounter="https://alfierenndev.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
   </head>
   <body>
     <header>
