--- a/index.hbs
+++ b/index.hbs
@@ -25,7 +25,7 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
 
     <!-- stylesheets -->
-    <link rel="stylesheet" href="/stylesheet.css" />
+    <style>{{> css}}</style>
 
     <!-- scripts -->
     <script data-goatcounter="https://alfierenndev.goatcounter.com/count"
