change how CSS is inlined

--- a/index.hbs
+++ b/index.hbs
@@ -25,7 +25,9 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
 
     <!-- stylesheets -->
-    <style>{{> css}}</style>
+    <style>
+      {{css "stylesheet.css"}}
+    </style>
 
     <!-- scripts -->
     <script data-goatcounter="https://alfierenndev.goatcounter.com/count"
