--- a/index.hbs
+++ b/index.hbs
@@ -3,7 +3,7 @@
   {{#with copy}}
   <head>
     {{#with browser-meta}}
-    <title>{{tabtitle}}</title>
+    <title>{{tab-title}}</title>
     <!-- browser metas -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
