do not minify normal stylesheet (this breaks things)

--- a/index.hbs
+++ b/index.hbs
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="/star.css" />
     {{else}}
     <style>
-      {{cssmin "stylesheet.css"}}
+      {{css "stylesheet.css"}}
       {{cssmin "star.css"}}
     </style>
     {{/if}}
