fix image generation

--- a/index.hbs
+++ b/index.hbs
@@ -43,14 +43,7 @@
   <body>
     <header>
       {{#with image}}
-      {{!-- <img
-        class="image"
-        src="{{src}}"
-        alt="{{alt}}"
-        width="{{width}}px"
-        height="{{height}}px"
-      /> --}}
-      {{image "./public/alfie-renn.jpg" "" "alt" "" [300]}}
+        {{{eleventyimage src "image" alt width}}}
       {{/with}}
       <h1 class="name">{{name}}</h1>
       <h2 class="subtitle">{{subtitle}}</h2>
