--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -60,6 +60,7 @@ header {
   flex-direction: column;
   align-items: center;
   margin: 1rem;
+  text-align: center;
 }
 header .image {
   height: 20rem;
@@ -75,7 +76,6 @@ header .image::after {
   animation: inherit;
   animation-direction: reverse;
 }
-
 header .name {
   display: block;
   text-align: center;
@@ -90,6 +90,16 @@ header .subtitle {
   font-size: 2em;
   margin: 0 0 1rem;
   color: var(--text-secondary);
+}
+
+@media (min-width: 800px) {
+  header {
+    flex-direction: row;
+    justify-content: center;
+  }
+  header .info {
+    margin-left: 1rem;
+  }
 }
 
 /* main */
