--- a/index.hbs
+++ b/index.hbs
@@ -65,8 +65,8 @@
         {{{eleventyimage src "image" alt width}}}
       {{/with}}
       <section class="info">
-        <h1 class="name">{{name}}</h1>
-        <h2 class="subtitle">{{subtitle}}</h2>
+        <h1 id="name" class="name">{{name}}</h1>
+        <h2 id="subtitle" class="subtitle">{{subtitle}}</h2>
         <a href="mailto:{{email}}">{{email}}</a>
       </section>
     </header>
@@ -83,12 +83,12 @@
         </div>
       </section>
       <section id="portfolio">
-        <h2>Websites I've made</h2>
+        <h2 id="websites-ive-made">Websites I've made</h2>
         <div class="scroller">
           <div class="portfolio">
             {{#each portfolio.sites}}
             <article>
-              <h3>{{title}}</h3>
+              <h3 id="{{title}}">{{title}}</h3>
               {{#if link}}
               <a target="_blank" href="{{link}}">{{niceLink link}}</a>
               {{/if}}
@@ -109,7 +109,7 @@
         </div>
       </section>
       <section id="testimonials">
-        <h2>Testimonials</h2>
+        <h2 id="quotes">Testimonials</h2>
         <div class="testimonials">
           {{#each testimonials}}
           <article>
