--- a/_includes/treehouse.hbs
+++ b/_includes/treehouse.hbs
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>{{tab-title}}</title>
+        <title>Alfie Renn - Treehouse cover letter</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="{{description}}" />
+        <meta name="description" content="Alfie Renn's cover letter for the Treehouse Board Game Café :)" />
 
         <!-- embed metas - https://ogp.me/ -->
-        <meta property="og:title" content="{{og-title}}" />
+        <meta property="og:title" content="Alfie Renn's cover letter for the Treehouse Board Game Café :)" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="{{og-url}}" />
-        <meta property="og:image" content="{{og-image}}" />
+        <meta property="og:url" content="https://alfierenn.dev/treehouse" />
+        {{!-- <meta property="og:image" content="" /> --}}
         <meta
             property="og:description"
-            content="{{og-description}}"
+            content="Alfie Renn's cover letter for the Treehouse Board Game Café :)"
         />
         <meta property="og:locale" content="en_GB" />
 
