--- a/_includes/treehouse.hbs
+++ b/_includes/treehouse.hbs
@@ -48,7 +48,7 @@
             }
             @page {
                 size: A4;
-                margin: 1cm;
+                margin: 0.75cm;
             }
             @media print {
                 body {
@@ -70,7 +70,7 @@
                 }
                 h1 {
                     font-size: 3rem;
-                    margin: 1rem 0;
+                    margin: 0 0 1rem;
                 }
                 h2 {
                     margin: 1rem 0;
