--- a/_includes/treehouse.hbs
+++ b/_includes/treehouse.hbs
@@ -69,8 +69,8 @@
                     margin: 0;
                 }
                 h1 {
-                    font-size: 3rem;
-                    margin: 0 0 1rem;
+                    font-size: 2.5rem;
+                    margin: 0 6rem 1rem;
                 }
                 h2 {
                     margin: 1rem 0;
