--- a/_includes/treehouse.hbs
+++ b/_includes/treehouse.hbs
@@ -46,6 +46,9 @@
                 background-color: white;
                 margin: 1rem 0;
             }
+            #qr-section {
+                display: none;
+            }
             @page {
                 size: A4;
                 margin: 0.75cm;
@@ -84,6 +87,10 @@
                 }
                 p {
                     margin: 0.25rem;
+                }
+                #qr-section {
+                    display: block;
+                    margin: 10rem 0;
                 }
             }
         </style>
