combine last lines into one

--- a/_includes/treehouse.hbs
+++ b/_includes/treehouse.hbs
@@ -31,6 +31,16 @@
             }
             main p {
                 text-align: justify;
+                text-indent: 2rem;
+            }
+            main p:nth-last-child(2) {
+                margin-top: 2rem;
+                text-align: center;
+                text-indent: initial;
+            }
+            main p:nth-last-child(1) {
+                text-indent: initial;
+                text-align: center;
             }
             main h1, h2, h3 {
                 text-align: center;
