--- a/index.hbs
+++ b/index.hbs
@@ -84,7 +84,7 @@
         </div>
       </section>
       <section id="portfolio">
-        <h2 id="websites-ive-made">Websites I've made</h2>
+        <h2 id="websites-ive-made">Websites I've had a hand in</h2>
         <div class="scroller">
           <div class="portfolio">
             {{#each portfolio.sites}}
@@ -97,7 +97,7 @@
               <img src="{{src}}" alt="{{alt}}" width="{{width}}">
               {{!-- {{{eleventyimage src "" alt width}}} --}}
               {{/with}}
-              <p>{{description}}</p>
+              <p>{{{description}}}</p>
               <div class="tools">
                 {{#each tools}}
                 <span>{{this}}</span>
